12508
This affects regular typechecking, not just macros.
```scala
class C {
  def c(a: Any, b: Any*) = a
}
object Test {
  new C().c(b = new { val x = 42 }, a = 0)
}
```
```
⚡ ~/scala/2.12.0-RC1/bin/scalac sandbox/test.scala
sandbox/test.scala:5: error: x is already defined as value x
  new C().c(b = new { val x = 42 }, a = 0)
                          ^
```
